--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <!-- <p>Seasoned Senior Data Analyst with 5+ years of experience driving business strategies through data-driven insights. Proven expertise in data science, statistical analysis, machine learning algorithms and project management.</p>
           </div> -->
 		  <h3 class="mb-4">Download Resume</h3>
-		  <p><a href="https://drive.google.com/file/d/1lUhcB8RmYBMkODAzW6iIFAL5O45aXlWn/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+		  <p><a href="https://drive.google.com/file/d/1w9j3QtmYG1qULyOazaujIh9etqDozaOe/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
 	          </div>
         </div>
 
@@ -513,7 +513,7 @@
 
 	<!-- <div class="row justify-content-center mt-5">
 		<div class="col-md-6 text-center ftco-animate">
-			<p><a href="https://drive.google.com/file/d/1lUhcB8RmYBMkODAzW6iIFAL5O45aXlWn/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+			<p><a href="https://drive.google.com/file/d/1w9j3QtmYG1qULyOazaujIh9etqDozaOe/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
 		</div>
 	</div>
 </div> -->
@@ -584,7 +584,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1lUhcB8RmYBMkODAzW6iIFAL5O45aXlWn/view?usp=drive_link">Resume Link</a></p>
+	            <p><a href="https://drive.google.com/file/d/1w9j3QtmYG1qULyOazaujIh9etqDozaOe/view?usp=sharing">Resume Link</a></p>
 	          </div>
           </div>
 
